--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		"@types/react": "16.14.0",
 		"@types/react-dom": "16.9.9",
 		"@types/sqlite3": "^3.1.8",
+		"apexcharts": "^3.36.3",
 		"framer-motion": "^4.1.17",
 		"react": "16.14.0",
+		"react-apexcharts": "^1.4.0",
 		"react-dom": "16.14.0",
 		"react-scripts": "3.4.4",
 		"typescript": "^4.4.2",
