--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "file-loader": "4.3.0",
     "framer-motion": "^4.1.17",
     "fs-extra": "^8.1.0",
+    "generic-pool": "^3.9.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -89,7 +90,7 @@
     "electron:start": "concurrently -k \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electronmon .\"",
     "build:tools": "node scripts/build.tools.js",
     "exec:tools": "node scripts/exec.tools.js",
-	"tsc": "tsc"
+    "tsc": "tsc"
   },
   "eslintConfig": {
     "extends": [
