--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "file-loader": "4.3.0",
     "framer-motion": "^4.1.17",
     "fs-extra": "^8.1.0",
+    "generic-pool": "^3.9.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -87,7 +88,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "electron:start": "concurrently -k \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3000 && wait-on http://localhost:3001 && electronmon .\"",
+    "electron:start": "concurrently -k \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3001 && wait-on http://localhost:3000 && electronmon .\"",
     "build:tools": "node scripts/build.tools.js",
     "exec:tools": "node scripts/exec.tools.js",
     "tsc": "tsc"
