--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "crypto": "^1.0.1",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -48,6 +49,7 @@
     "framer-motion": "^4.1.17",
     "fs-extra": "^8.1.0",
     "generic-pool": "^3.9.0",
+    "get-port": "^5.1.1",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -82,7 +84,8 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "ws": "^8.12.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
