--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "@types/stream-json": "^1.7.3",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "electron": "^7.3.2",
+    "electron": "20.3.1",
     "electron-builder": "^23.6.0",
     "electronmon": "^2.0.2",
     "wait-on": "^6.0.1"
